Сетка на флексах для главной страницы

--- a/index.html
+++ b/index.html
@@ -58,14 +58,18 @@
         </div>
         <div class="product-free-container">
           <article class="raspberry-free">
-            <h3>Малинка даром!</h3>
-            <p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a class="button button-raspberry" href="#">Хочу варенье!</a>
+            <div class="product-free-content">
+              <h3>Малинка даром!</h3>
+              <p>При покупке любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            </div>
+            <a class="button product-free-button" href="#">Хочу&nbsp;варенье!</a>
           </article>
           <article class="chocolate-free">
-            <h3>Шоколадки даром!</h3>
-            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <a class="button" href="#">Хочу шоколадки!</a>
+            <div class="product-free-content">
+              <h3>Шоколадки даром!</h3>
+              <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            </div>
+            <a class="button product-free-button" href="#">Хочу&nbsp;шоколадки!</a>
           </article>
         </div>
         <section>
@@ -73,42 +77,50 @@
           <ul class="goods">
             <li>
               <section class="goods-item">
-                <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-                <p class="goods-item-price">310 р/кг</p>
-                <h3 class="goods-item-name">
-                  <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                </h3>
-                <button class="button" type="button">Быстрый просмотр</button>
+                <div class="goods-item-content">
+                  <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                  <p class="goods-item-price">310 р/кг</p>
+                  <h3 class="goods-item-name">
+                    <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                  </h3>
+                </div>
+                <button class="button goods-item-button" type="button">Быстрый просмотр</button>
               </section>
             </li>
             <li>
               <section class="goods-item">
-                <img src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-                <p class="goods-item-price">380 р/кг</p>
-                <h3 class="goods-item-name">
-                  <a>Сливочно-кофейное с кусочками шоколада</a>
-                </h3>
-                <button class="button" type="button">Быстрый просмотр</button>
+                <div class="goods-item-content">
+                  <img src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                  <p class="goods-item-price">380 р/кг</p>
+                  <h3 class="goods-item-name">
+                    <a>Сливочно-кофейное с кусочками шоколада</a>
+                  </h3>
+                </div>
+                <button class="button goods-item-button" type="button">Быстрый просмотр</button>
               </section>
             </li>
             <li>
               <section class="goods-item">
-                <img src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-                <p class="goods-item-price">355 р/кг</p>
-                <h3 class="goods-item-name">
-                  <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
-                </h3>
-                <button class="button" type="button">Быстрый просмотр</button>
+                <div class="goods-item-content">
+                  <img src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                  <p class="goods-item-price">355 р/кг</p>
+                  <h3 class="goods-item-name">
+                    <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
+                  </h3>
+                </div>
+                <button class="button goods-item-button" type="button">Быстрый просмотр</button>
               </section>
             </li>
             <li>
               <section class="goods-item">
-                <img src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-                <p class="goods-item-price">415 р/кг</p>
-                <h3 class="goods-item-name">
-                  <a>Сливочное крем-брюле с карамельной подливкой</a>
-                </h3>
-                <button class="button" type="button">Быстрый просмотр</button>
+                <div class="goods-item-content">
+                  <img src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                  <p class="goods-item-price">415 р/кг</p>
+                  <h3 class="goods-item-name">
+                    <a>Сливочное крем-брюле с карамельной подливкой</a>
+                  </h3>
+                </div>
+                <button class="button goods-item-button" type="button">Быстрый просмотр</button>
               </section>
             </li>
           </ul>
@@ -155,7 +167,7 @@
     <footer class="main-footer container">
       <section class="footer-social">
         <h2>Социальные сети</h2>
-        <ul>
+        <ul class="footer-social-links">
           <li>
             <a class="social-button" href="#">Фейсбук</a>
           </li>
@@ -172,10 +184,12 @@
       </section>
       <section class="footer-info">
         <h3>Дополнительная информация</h3>
-        <a href="#">Для поставщиков</a>
-        <a href="#">Наши документы</a>
-        <a href="#">О производстве</a>
-        <a href="#">Экологические стандарты</a>
+        <ul class="footer-info-links">
+          <li><a href="#">Для поставщиков</a></li>
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">О производстве</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
       </section>
       <section class="footer-copyright">
         <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
