--- a/catalog.html
+++ b/catalog.html
@@ -9,32 +9,34 @@
   <body class="page-body">
     <header class="main-header container">
       <nav class="main-navigation">
-      <div class="main-navigation-wrapper">
-        <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
-        <ul class="main-menu">
-          <li><a href="#">Каталог</a>
-            <ul class="sub-menu">
-              <li><a href="#">Новинки</a></li>
-              <li><a href="#">Сливочное</a></li>
-              <li><a href="#">Щербеты</a></li>
-              <li><a href="#">Фруктовый лед</a></li>
-              <li><a href="#">Мелорин</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О компании</a></li>
-        </ul>
-        <div class="main-header-buttons">
-          <a href="#">Поиск</a>
-          <a href="#">Вход</a>
-          <a href="#">Пусто</a>
+        <div class="main-navigation-wrapper">
+          <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
+          <ul class="main-menu">
+            <li><a href="#">Каталог</a>
+              <ul class="sub-menu">
+                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Сливочное</a></li>
+                <li><a href="#">Щербеты</a></li>
+                <li><a href="#">Фруктовый лед</a></li>
+                <li><a href="#">Мелорин</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Доставка и оплата</a></li>
+            <li><a href="#">О компании</a></li>
+          </ul>
+          <div class="main-header-buttons">
+            <a href="#">Поиск</a>
+            <a href="#">Вход</a>
+            <a href="#">Пусто</a>
+          </div>
         </div>
-      </div>
       </nav>
-      <div class="header-contacts">
-        <p class="header-item">c 10 до 20, ежедневно</p>
-        <a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
-      </div>
+        <div class="header-contacts-wrapper">
+          <div class="header-contacts">
+            <p class="header-item">c 10 до 20, ежедневно</p>
+            <a class="header-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
+          </div>
+        </div>
     </header>
     <main class="container">
       <div class="page-catalog-header">
@@ -48,124 +50,148 @@
       <!--Здесь будет форма для фильтрации-->
       <h2>Каталог сливочного мороженого</h2>
       <ul class="goods goods-catalog">
-        <li>
+        <li class="goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-            <p class="goods-item-price">310 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <p class="goods-item-price">310 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class="goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-            <p class="goods-item-price">380 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+              <p class="goods-item-price">380 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-            <p class="goods-item-price">355 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <p class="goods-item-price">355 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-            <p class="goods-item-price">415 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+              <p class="goods-item-price">415 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product05.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-            <p class="goods-item-price">325 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочное с брусничным джемом</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product05.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+              <p class="goods-item-price">325 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочное с брусничным джемом</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product06.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-            <p class="goods-item-price">410 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочно-черничное с цельными ягодами черники</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product06.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+              <p class="goods-item-price">410 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочно-черничное с цельными ягодами черники</a>
+              </h3>
+            <div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product07.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-            <p class="goods-item-price">315 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product07.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+              <p class="goods-item-price">315 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product08.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-            <p class="goods-item-price">320 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочное с шоколадной стружкой</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product08.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+              <p class="goods-item-price">320 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочное с шоколадной стружкой</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product09.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-            <p class="goods-item-price">440 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочно-ванильное с кусочками шоколада</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product09.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+              <p class="goods-item-price">440 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочно-ванильное с кусочками шоколада</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-            <p class="goods-item-price">435 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочное с ментоловым сиропом</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
+              <p class="goods-item-price">435 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочное с ментоловым сиропом</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-            <p class="goods-item-price">355 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочное с кусочками черного шоколада</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+              <p class="goods-item-price">355 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочное с кусочками черного шоколада</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
-        <li>
+        <li class"goods-catalog-item">
           <section class="goods-item">
-            <img src="img/product12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-            <p class="goods-item-price">420 р/кг</p>
-            <h3 class="goods-item-name">
-              <a href="#">Сливочное с мятным сиропом</a>
-            </h3>
-            <button class="button" type="button">Быстрый просмотр</button>
+            <div class="goods-item-content">
+              <img src="img/product12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+              <p class="goods-item-price">420 р/кг</p>
+              <h3 class="goods-item-name">
+                <a href="#">Сливочное с мятным сиропом</a>
+              </h3>
+            </div>
+            <button class="button goods-item-button" type="button">Быстрый просмотр</button>
           </section>
         </li>
       </ul>
@@ -182,7 +208,7 @@
     <footer class="main-footer container">
       <section class="footer-social">
         <h2>Социальные сети</h2>
-        <ul>
+        <ul class="footer-social-links">
           <li>
             <a class="social-button" href="#">Фейсбук</a>
           </li>
@@ -199,10 +225,12 @@
       </section>
       <section class="footer-info">
         <h3>Дополнительная информация</h3>
-        <a href="#">Для поставщиков</a>
-        <a href="#">Наши документы</a>
-        <a href="#">О производстве</a>
-        <a href="#">Экологические стандарты</a>
+        <ul class="footer-info-links">
+          <li><a href="#">Для поставщиков</a></li>
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">О производстве</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
       </section>
       <section class="footer-copyright">
         <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
