--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
           <div class="main-navigation-wrapper">
             <img src="img/logo.svg" width="154" height="64"  alt="Логотип магазина мороженого «Gllacy Shop»">
             <ul class="main-menu">
-              <li><a href="#">Каталог</a>
+              <li><a class="main-menu-link" href="catalog.html">Каталог</a>
                 <ul class="sub-menu">
                   <li><a href="#">Новинки</a></li>
-                  <li><a href="#">Сливочное</a></li>
+                  <li><a href="catalog.html">Сливочное</a></li>
                   <li><a href="#">Щербеты</a></li>
                   <li><a href="#">Фруктовый лед</a></li>
                   <li><a href="#">Мелорин</a></li>
                 </ul>
               </li>
-              <li><a href="#">Доставка и оплата</a></li>
-              <li><a href="#">О компании</a></li>
+              <li class="catalog-item"><a class="main-menu-link" href="#">Доставка и оплата</a></li>
+              <li class="catalog-item"><a class="main-menu-link" href="#">О компании</a></li>
             </ul>
             <div class="main-header-buttons">
               <a class="search header-button" href="#" title="Поиск">
@@ -71,7 +71,6 @@
               <button aria-label="Третий слайд"></button>
             </div>
           </div>
-
           <div class="product-free-container">
             <article class="raspberry-free">
                 <h3>Малинка даром!</h3>
@@ -91,7 +90,10 @@
                 <section class="goods-item goods-item-hit">
                   <div class="goods-item-content">
                     <img class="ice-cream-img" src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-                    <p class="goods-item-price">310 р/кг</p>
+                    <p class="goods-item-price">
+                      <span class="value">310 ₽</span>
+                      <span class="weight">/кг</span></p>
+                    </p>
                     <h3 class="goods-item-name">
                       <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                     </h3>
@@ -103,7 +105,10 @@
                 <section class="goods-item goods-item-hit">
                   <div class="goods-item-content">
                     <img class="ice-cream-img" src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-                    <p class="goods-item-price">380 р/кг</p>
+                    <p class="goods-item-price">
+                      <span class="value">380 ₽</span>
+                      <span class="weight">/кг</span></p>
+                    </p>
                     <h3 class="goods-item-name">
                       <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                     </h3>
@@ -115,7 +120,10 @@
                 <section class="goods-item goods-item-hit">
                   <div class="goods-item-content">
                     <img class="ice-cream-img" src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-                    <p class="goods-item-price">355 р/кг</p>
+                    <p class="goods-item-price">
+                      <span class="value">355 ₽</span>
+                      <span class="weight">/кг</span></p>
+                    </p>
                     <h3 class="goods-item-name">
                       <a href="#">Сливочно-клубничное<br> с присыпкой из белого шоколада</a>
                     </h3>
@@ -127,7 +135,10 @@
                 <section class="goods-item goods-item-hit">
                   <div class="goods-item-content">
                     <img class="ice-cream-img" src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-                    <p class="goods-item-price">415 р/кг</p>
+                    <p class="goods-item-price">
+                      <span class="value">415 ₽</span>
+                      <span class="weight">/кг</span></p>
+                    </p>
                     <h3 class="goods-item-name">
                       <a href="#">Сливочное крем-брюле<br> с карамельной подливкой</a>
                     </h3>
@@ -152,7 +163,7 @@
             <article class="news">
               <div class="news-content">
                 <p>Новое в нашем блоге</p>
-                <h2><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
+                <h2 class="news-header"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
               </div>
             </article>
             <section class="mailing">
@@ -160,7 +171,10 @@
                 <h2 class="visually-hidden">Подписаться на рассылку</h2>
                 <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
               </div>
-                <button class="button button-mailing">Отправить</button>
+                <form class="mailing-form">
+                  <input class="email" type="email" name="emeil" placeholder="email@example.com">
+                  <button class="button button-mailing">Отправить</button>
+                </form>
             </section>
           </div>
         </div>
@@ -169,7 +183,7 @@
             <img src="https://via.placeholder.com/2200x430" width="2200" height="430" alt="Карта сайта">
             <aside class="contacts">
               <div class="contacts-wrapper">
-                <p class="address-name">Адрес главного офиса и офлайн-магазина:</p>
+                <p class="address-name">Адрес главного офиса<br> и офлайн-магазина:</p>
                 <p class="address"><b>ул. Большая Конюшенная, 19/8, Санкт-Петербург</b></p>
                 <p class="tel-name">Для заказов по телефону:</p>
                 <a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
@@ -224,14 +238,14 @@
         <section class="footer-info">
           <h3 class="visually-hidden">Дополнительная информация</h3>
           <ul class="footer-info-links">
-            <li><a href="#">Для поставщиков</a></li>
+            <li class="link-heart"><a href="#">Для поставщиков</a></li>
             <li><a href="#">Наши документы</a></li>
             <li><a href="#">О производстве</a></li>
             <li><a href="#">Экологические стандарты</a></li>
           </ul>
         </section>
         <section class="footer-copyright">
-          <a href="#"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_htmlacademy.svg" width="108" height="39" alt="HTML Academy"></a>
           <p class="footer-copyright-link">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> © 2019</p>
         </section>
       </footer>
