Стилизация внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,7 @@
     <main class="container">
       <div class="page-catalog-header">
         <ul class="breadcrumbs">
-          <li class="crumb"><a href="#">Главная</a></li>
+          <li class="crumb"><a href="index.html">Главная</a></li>
           <li class="crumb"><a href="#">Каталог</a></li>
           <li class="breadcrumbs-current"><a>Сливочное</a></li>
         </ul>
