--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <h2 class="visually-hidden">Подписаться на рассылку</h2>
                 <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
               </div>
-                <form class="mailing-form">
+                <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
                   <input class="email" type="email" name="emeil" placeholder="email@example.com">
                   <button class="button button-mailing">Отправить</button>
                 </form>
