--- a/catalog.html
+++ b/catalog.html
@@ -25,17 +25,70 @@
               <li><a class="main-menu-link" href="#">О компании</a></li>
             </ul>
             <div class="catalog-header-buttons">
-              <a class="search header-button" href="#" title="Поиск">
-                <svg class="search-svg" width="16" height="16" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M16 14.6652L11.0785 9.73294C11.9827 8.48188 12.3826 6.93501 12.1984 5.40134C12.0141 3.86767 11.2594 2.4601 10.0848 1.45982C8.91022 0.45954 7.40233 -0.0598191 5.86234 0.00548954C4.32234 0.0707982 2.86363 0.715967 1.77757 1.81212C0.691516 2.90827 0.0580813 4.3747 0.0038002 5.91849C-0.050481 7.46228 0.478388 8.96976 1.48476 10.1398C2.49113 11.3098 3.90092 12.0563 5.43251 12.2301C6.96409 12.4039 8.50472 11.9922 9.74663 11.0772L14.6586 16L16 14.6652ZM6.08152 10.3767C5.24079 10.3767 4.41895 10.1268 3.71991 9.65874C3.02087 9.19063 2.47604 8.5253 2.15431 7.74687C1.83258 6.96844 1.7484 6.11188 1.91241 5.28551C2.07643 4.45913 2.48128 3.70006 3.07576 3.10427C3.67024 2.50849 4.42766 2.10276 5.25223 1.93838C6.0768 1.77401 6.93149 1.85837 7.70822 2.1808C8.48495 2.50324 9.14883 3.04927 9.61591 3.74983C10.083 4.4504 10.3323 5.27404 10.3323 6.11661C10.3298 7.24568 9.88115 8.3278 9.08451 9.12618C8.28788 9.92456 7.20813 10.3742 6.08152 10.3767Z" fill="white"/>
-                </svg>
-              </a>
-              <a class="enter header-button" href="#">
-                <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M6.04 14.88L12.96 9.5L6.04 4.13V7.04H0V11.96H6.04V14.88Z" fill="white"/>
-                  <path d="M18 0H5C4.46957 0 3.96086 0.210714 3.58579 0.585786C3.21071 0.960859 3 1.46957 3 2V4H5V2H18V17H5V15H3V17C3 17.5304 3.21071 18.0391 3.58579 18.4142C3.96086 18.7893 4.46957 19 5 19H18C18.5304 19 19.0391 18.7893 19.4142 18.4142C19.7893 18.0391 20 17.5304 20 17V2C20 1.46957 19.7893 0.960859 19.4142 0.585786C19.0391 0.210714 18.5304 0 18 0Z" fill="white"/>
-                </svg>Вход</a>
-              <a class="header-button cart-catalog" href="#">2 товара</a>
+              <div class="search-wrapper">
+                <a class="search header-button" href="#" title="Поиск">
+                  <svg class="search-svg" width="16" height="16" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 14.6652L11.0785 9.73294C11.9827 8.48188 12.3826 6.93501 12.1984 5.40134C12.0141 3.86767 11.2594 2.4601 10.0848 1.45982C8.91022 0.45954 7.40233 -0.0598191 5.86234 0.00548954C4.32234 0.0707982 2.86363 0.715967 1.77757 1.81212C0.691516 2.90827 0.0580813 4.3747 0.0038002 5.91849C-0.050481 7.46228 0.478388 8.96976 1.48476 10.1398C2.49113 11.3098 3.90092 12.0563 5.43251 12.2301C6.96409 12.4039 8.50472 11.9922 9.74663 11.0772L14.6586 16L16 14.6652ZM6.08152 10.3767C5.24079 10.3767 4.41895 10.1268 3.71991 9.65874C3.02087 9.19063 2.47604 8.5253 2.15431 7.74687C1.83258 6.96844 1.7484 6.11188 1.91241 5.28551C2.07643 4.45913 2.48128 3.70006 3.07576 3.10427C3.67024 2.50849 4.42766 2.10276 5.25223 1.93838C6.0768 1.77401 6.93149 1.85837 7.70822 2.1808C8.48495 2.50324 9.14883 3.04927 9.61591 3.74983C10.083 4.4504 10.3323 5.27404 10.3323 6.11661C10.3298 7.24568 9.88115 8.3278 9.08451 9.12618C8.28788 9.92456 7.20813 10.3742 6.08152 10.3767Z" fill="white"/>
+                  </svg>
+                </a>
+                <section class="modal modal-search">
+                  <form action="https://echo.htmlacademy.ru/courses" method="get">
+                    <input class="form-input modal-search-form" type="text" name="search" placeholder="Крем-брюле">
+                  </form>
+                </section>
+              </div>
+              <div class="enter-wrapper">
+                <a class="enter header-button" href="#">
+                  <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.04 14.88L12.96 9.5L6.04 4.13V7.04H0V11.96H6.04V14.88Z" fill="white"/>
+                    <path d="M18 0H5C4.46957 0 3.96086 0.210714 3.58579 0.585786C3.21071 0.960859 3 1.46957 3 2V4H5V2H18V17H5V15H3V17C3 17.5304 3.21071 18.0391 3.58579 18.4142C3.96086 18.7893 4.46957 19 5 19H18C18.5304 19 19.0391 18.7893 19.4142 18.4142C19.7893 18.0391 20 17.5304 20 17V2C20 1.46957 19.7893 0.960859 19.4142 0.585786C19.0391 0.210714 18.5304 0 18 0Z" fill="white"/>
+                  </svg>Вход</a>
+                <section class="modal modal-enter">
+                  <form action="https://echo.htmlacademy.ru/courses" method="post">
+                    <input class="form-input modal-email-form" type="email" name="email" placeholder="email@example.com">
+                    <input class="form-input modal-password-form" type="password" name="password">
+                    <div class="links-wrapper">
+                      <div class="links">
+                        <a class="login-form-forgot" href="#">Забыли пароль?</a>
+                        <a class="login-form-sign-up" href="#">Новая регистрация</a>
+                        </div>
+                        <button class="button modal-button" type="submit">Войти</button>
+                    </div>
+                  </form>
+                </section>
+              </div>
+              <div class="cart-wrapper">
+                <a class="header-button cart-catalog" href="#">2 товара</a>
+                <section class="modal modal-cart">
+                  <h2 class="visually-hidden">Корзина</h2>
+                    <div class="сart-table">
+                      <div class="cart-item">
+                        <button class="delete-cart-item" type="button">Удалить</button>
+                        <a href="catalog-item.html">
+                          <img class="cart-item-img" src="img/cart-ice1.jpg" width="32" height="32" alt="Пломбир с апельсиновым джемом">
+                          <span class="cart-item-title">Пломбир с апельсиновым джемом</span>
+                        </a>
+                        <span class="cart-item-cost">1,5 кг x <b>200 руб</b></span>
+                        <span class="cart-item-price">300 руб</span>
+                      </div>
+                      <div class="cart-item cart-last-item">
+                        <button class="delete-cart-item" type="button">Удалить</button>
+                        <a href="catalog-item">
+                          <img class="cart-item-img" src="img/cart-ice2.jpg" width="32" height="32" alt="Клубничный пломбир с присыпкой  из белого шоколада">
+                          <span class="cart-item-title">Клубничный пломбир с присыпкой  из белого шоколада</span>
+                        </a>
+                        <span class="cart-item-cost">1,5 кг x <b>300 руб</b></span>
+                        <span class="cart-item-price">450 руб</span>
+                      </div>
+                      <div class="cart-item cart-cost">
+                          <span>Итого: 750 руб.</span>
+                      </div>
+                    </ul>
+                    <div class="cart-button-wrapper">
+                      <a class="button cart-order-button" href="#">Оформить заказ</a>
+                    </div>
+                </section>
+              </div>
             </div>
           </div>
         </nav>
