Доступная разметка внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -115,6 +115,7 @@
           <fieldset class="filter-item">
             <legend class="filter-legend">Сортировка:</legend>
             <div class="filter-sorting-box">
+              <label class="visually-hidden" for="sorting-filters">Сортировка мороженого</label>
               <select class="select-ice" id="sorting-filters" name="sorting-filters">
                 <option selected value="popularity">по популярности</option>
                 <option value="inexpensive-first">сначала недорогие</option>
