--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
                 <section class="modal modal-enter">
                   <form action="https://echo.htmlacademy.ru/courses" method="post">
-                    <label сlass="visually-hidden" for="email-form">Логин</label>
+                    <label class="visually-hidden" for="email-form"></label>
                     <input class="form-input modal-email-form" type="email" name="email" placeholder="email@example.com" id="email-form">
                     <label class="visually-hidden" for="password-form">Пароль</label>
                     <input class="form-input modal-password-form" type="password" name="password" id="password-form">
