--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
                 <section class="modal modal-enter">
                   <form action="https://echo.htmlacademy.ru/courses" method="post">
-                    <label class="visually-hidden" for="email-form"></label>
+                    <label class="visually-hidden" for="email-form">Логин</label>
                     <input class="form-input modal-email-form" type="email" name="email" placeholder="email@example.com" id="email-form">
                     <label class="visually-hidden" for="password-form">Пароль</label>
                     <input class="form-input modal-password-form" type="password" name="password" id="password-form">
@@ -118,7 +118,7 @@
                     <img class="ice-cream-img" src="img/product01.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                     <p class="goods-item-price">
                       <span class="value">310 ₽</span>
-                      <span class="weight">/кг</span></p>
+                      <span class="weight">/кг</span>
                     </p>
                     <h3 class="goods-item-name">
                       <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -133,7 +133,7 @@
                     <img class="ice-cream-img" src="img/product02.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                     <p class="goods-item-price">
                       <span class="value">380 ₽</span>
-                      <span class="weight">/кг</span></p>
+                      <span class="weight">/кг</span>
                     </p>
                     <h3 class="goods-item-name">
                       <a href="#">Сливочно-кофейное с кусочками шоколада</a>
@@ -148,7 +148,7 @@
                     <img class="ice-cream-img" src="img/product03.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                     <p class="goods-item-price">
                       <span class="value">355 ₽</span>
-                      <span class="weight">/кг</span></p>
+                      <span class="weight">/кг</span>
                     </p>
                     <h3 class="goods-item-name">
                       <a href="#">Сливочно-клубничное<br> с присыпкой из белого шоколада</a>
@@ -163,7 +163,7 @@
                     <img class="ice-cream-img" src="img/product04.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                     <p class="goods-item-price">
                       <span class="value">415 ₽</span>
-                      <span class="weight">/кг</span></p>
+                      <span class="weight">/кг</span>
                     </p>
                     <h3 class="goods-item-name">
                       <a href="#">Сливочное крем-брюле<br> с карамельной подливкой</a>
