--- a/catalog.html
+++ b/catalog.html
@@ -235,7 +235,7 @@
               <span class="value">355 &#8381;</span>
               <span class="weight">/кг</span></p>
             <h3 class="goods-item-name">
-              <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+              <a href="#">Сливочно-клубничное с<br> присыпкой из белого шоколада</a>
             </h3>
           </div>
           <button class="button goods-item-button fast-view" type="button">Быстрый просмотр</button>
@@ -275,7 +275,7 @@
           <div class="goods-item-content">
             <img class="ice-cream-img" src="img/product06.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
             <p class="goods-item-price">
-              <span class="value">310 &#8381;</span>
+              <span class="value">410 &#8381;</span>
               <span class="weight">/кг</span>
             </p>
             <h3 class="goods-item-name">
@@ -324,7 +324,7 @@
               <span class="weight">/кг</span>
             </p>
             <h3 class="goods-item-name">
-              <a href="#">Сливочно-ванильное с кусочками шоколада</a>
+              <a href="#">Сливочно-ванильное<br> с кусочками шоколада</a>
             </h3>
           </div>
           <button class="button goods-item-button fast-view" type="button">Быстрый просмотр</button>
@@ -333,13 +333,13 @@
       <li class="goods-catalog-item">
         <section class="goods-item">
           <div class="goods-item-content">
-            <img class="ice-cream-img" src="img/product10.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+            <img class="ice-cream-img" src="img/product10.jpg" width="267" height="267" alt="сливочное с ментоловым сиропом">
             <p class="goods-item-price">
               <span class="value">435 &#8381;</span>
               <span class="weight">/кг</span>
             </p>
             <h3 class="goods-item-name">
-              <a href="#">Сливочно-ванильное с кусочками шоколада</a>
+              <a href="#">Сливочное с ментоловым<br> сиропом</a>
             </h3>
           </div>
           <button class="button goods-item-button fast-view" type="button">Быстрый просмотр</button>
