--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               </div>
                 <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
                   <label class="visually-hidden" for="email">Ваш email</label>
-                  <input class="email" type="email" name="emeil" placeholder="email@example.com" id="email">
+                  <input class="form-input email" type="email" name="emeil" placeholder="email@example.com" id="email">
                   <button class="button button-mailing" type="submit">Отправить</button>
                 </form>
             </section>
@@ -280,9 +280,9 @@
     <section class="modal modal-feedback">
       <h2 class="feedback-header">Мы обязательно вам ответим!</h2>
       <form action="https://echo.htmlacademy.ru/courses" method="post">
-        <input class="feedback-input feedback-name" name="feedback-name" type="text" placeholder="Имя Фамилия">
-        <input class="feedback-input feedback-email" name="feedback-email" type="email" placeholder="email@example.com">
-        <textarea class="feedback-input feedback-area" name="message" placeholder="В свободной форме"></textarea>
+        <input class="form-input feedback-input feedback-name" name="feedback-name" type="text" placeholder="Имя Фамилия">
+        <input class="form-input feedback-input feedback-email" name="feedback-email" type="email" placeholder="email@example.com">
+        <textarea class="form-input feedback-input feedback-area" name="message" placeholder="В свободной форме"></textarea>
         <button class="modal-close" aria-label="Закрыть" type="button"></button>
         <div class="feedback-button-wrapper">
           <button class="button feedback-button" type="submit">Отправить</button>
