--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <aside class="contacts">
             <div class="contacts-wrapper">
               <p class="address-name">Адрес главного офиса<br> и офлайн-магазина:</p>
-              <p class="address"><b>ул. Большая Конюшенная,</br> 19/8, Санкт-Петербург</b></p>
+              <p class="address"><b>ул. Большая Конюшенная,<br> 19/8, Санкт-Петербург</b></p>
               <p class="tel-name">Для заказов по телефону:</p>
               <a class="contacts-phone" href="tel:8124502525"> 8 812 450-25-25 </a>
               <p class="opening-hours">(c 10 до 20 ежедневно)</p>
