--- a/catalog.html
+++ b/catalog.html
@@ -430,7 +430,7 @@
         <ul class="footer-info-links">
           <li class="link-heart"><a href="#">Для поставщиков</a></li>
           <li><a href="#">Наши документы</a></li>
-          <li><a class="production" href="#">О производстве</a></li>
+          <li><a href="#">О производстве</a></li>
           <li><a href="#">Экологические стандарты</a></li>
         </ul>
       </section>
