--- a/index.html
+++ b/index.html
@@ -295,5 +295,6 @@
         </div>
       </form>
     </section>
+    <script src="js/mailing.js" type="text/javascript"></script>
   </body>
 </html>
