Оживляем интерактивные элементы

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
               </li>
             </ul>
             <div class="slider-controls">
-              <button class="current" aria-label="Первый слайд"></button>
-              <button aria-label="Второй слайд"></button>
-              <button aria-label="Третий слайд"></button>
+              <button class="slider-control-1 current" aria-label="Первый слайд"></button>
+              <button class="slider-control-2" aria-label="Второй слайд"></button>
+              <button class="slider-control-3" aria-label="Третий слайд"></button>
             </div>
           </div>
           <div class="product-free-container">
