Оживление главной страницы

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
               </li>
             </ul>
             <div class="slider-controls">
-              <button class="slider-control-1 current" aria-label="Первый слайд"></button>
-              <button class="slider-control-2" aria-label="Второй слайд"></button>
-              <button class="slider-control-3" aria-label="Третий слайд"></button>
+              <button class="slider-control current" aria-label="Первый слайд"></button>
+              <button class="slider-control" aria-label="Второй слайд"></button>
+              <button class="slider-control" aria-label="Третий слайд"></button>
             </div>
           </div>
           <div class="product-free-container">
@@ -295,6 +295,6 @@
         </div>
       </form>
     </section>
-    <script src="js/mailing.js" type="text/javascript"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
