--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page-body">
     <div class="site-wrapper slide1">
@@ -295,6 +295,6 @@
         </div>
       </form>
     </section>
-    <script src="js/script.js"></script>
+    <script src="js/min.js"></script>
   </body>
 </html>
